Updating comparisons to use updated DiskDiff with FormattedDisk.